# eswiktionary_parser

./: .gitignore  README.md  pyproject.toml
eswiktionary_parser/: defaults.py  definition.py  downloader.py  dump_parser.py  fixture_reader.py  wiki_parser.py
tests/: test_adjective_forms_are_considered.py  test_book_quotes_are_ignored.py  test_can_handle_templates_in_templates.py  test_can_name_the_person_of_a_conjugation.py  test_can_parse_dump_files.py  test_contractions_are_considered.py  test_dump_parser.py  test_examples_are_ignored.py  test_gerunds_are_considered.py  test_ignores_examples.py  test_images_are_ignored.py  test_leading_parenthesis_are_ignored.py  test_non_spanish_languages_are_ignored.py  test_nouns_acting_as_verbs_are_processed.py  test_participles_are_considered.py  test_related_articles_are_ignored.py  test_scope_references_are_ignored.py  test_synonyms_are_ignored.py  test_templates_in_templates_are_handled.py  test_unwanted_prefixes_are_removed.py  test_verb_forms_are_considered.py  test_wiki_parser.py
tests/fixtures/: andá.wiki  asocar.xml  beber.wiki  boy.wiki  calzado.wiki  chasqui.wiki  elemental.wiki  francia.wiki  listen.wiki  mudanza.wiki  nombre.wiki  palabra.wiki  palabra.xml  pasasteis.wiki  provinieras.wiki  provén.wiki  prótesis.wiki  traducción.xml  té.wiki  uno.wiki  véase.wiki
